--- a/Blood Bank System/Blood Bank System/Base.lproj/Main.storyboard
+++ b/Blood Bank System/Blood Bank System/Base.lproj/Main.storyboard
@@ -87,23 +87,23 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="19" translatesAutoresizingMaskIntoConstraints="NO" id="caL-SB-k3q" userLabel="BigContainerSV">
-                                <rect key="frame" x="20" y="123" width="353" height="675"/>
+                                <rect key="frame" x="20" y="20" width="353" height="802"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Login/Sign In Page" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="t3O-Zj-721" userLabel="HeaderLBL">
-                                        <rect key="frame" x="0.0" y="0.0" width="353" height="67.666666666666671"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="353" height="80.333333333333329"/>
                                         <color key="backgroundColor" systemColor="systemRedColor"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="32"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="dCN-Vf-QB8" userLabel="userNamePasswordSV">
-                                        <rect key="frame" x="0.0" y="86.666666666666657" width="353" height="143"/>
+                                        <rect key="frame" x="0.0" y="99.333333333333329" width="353" height="168.33333333333337"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="WDj-4o-dL2" userLabel="userNameSV">
-                                                <rect key="frame" x="0.0" y="0.0" width="353" height="67.333333333333329"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="353" height="80"/>
                                                 <subviews>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VFr-i2-Nun">
-                                                        <rect key="frame" x="0.0" y="0.0" width="47.333333333333336" height="67.333333333333329"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="47.333333333333336" height="80"/>
                                                         <color key="backgroundColor" systemColor="quaternaryLabelColor"/>
                                                         <state key="normal" title="Button"/>
                                                         <buttonConfiguration key="configuration" style="plain" image="person.fill" catalog="system" title="">
@@ -111,17 +111,17 @@
                                                         </buttonConfiguration>
                                                     </button>
                                                     <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="username" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Gy9-ZL-9Xx">
-                                                        <rect key="frame" x="55.333333333333343" y="0.0" width="297.66666666666663" height="67.333333333333329"/>
+                                                        <rect key="frame" x="55.333333333333343" y="0.0" width="297.66666666666663" height="80"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                         <textInputTraits key="textInputTraits"/>
                                                     </textField>
                                                 </subviews>
                                             </stackView>
                                             <stackView opaque="NO" contentMode="scaleToFill" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="YrA-jC-yY6" userLabel="passwordSV">
-                                                <rect key="frame" x="0.0" y="75.333333333333343" width="353" height="67.666666666666657"/>
+                                                <rect key="frame" x="0.0" y="88.000000000000028" width="353" height="80.333333333333343"/>
                                                 <subviews>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fAH-bP-LBr">
-                                                        <rect key="frame" x="0.0" y="0.0" width="47.333333333333336" height="67.666666666666671"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="47.333333333333336" height="80.333333333333329"/>
                                                         <color key="backgroundColor" systemColor="quaternaryLabelColor"/>
                                                         <state key="normal" title="Button"/>
                                                         <buttonConfiguration key="configuration" style="plain" image="lock.fill" catalog="system" title="">
@@ -129,7 +129,7 @@
                                                         </buttonConfiguration>
                                                     </button>
                                                     <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="password" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cJa-rr-pNf">
-                                                        <rect key="frame" x="55.333333333333343" y="0.0" width="297.66666666666663" height="67.666666666666671"/>
+                                                        <rect key="frame" x="55.333333333333343" y="0.0" width="297.66666666666663" height="80.333333333333329"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                         <textInputTraits key="textInputTraits"/>
                                                     </textField>
@@ -138,10 +138,10 @@
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="goR-Ki-LRi" userLabel="loginSV">
-                                        <rect key="frame" x="0.0" y="248.66666666666671" width="353" height="67.333333333333343"/>
+                                        <rect key="frame" x="0.0" y="286.66666666666669" width="353" height="80"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jf8-UA-Anj">
-                                                <rect key="frame" x="0.0" y="0.0" width="170.66666666666666" height="67.333333333333329"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="170.66666666666666" height="80"/>
                                                 <color key="backgroundColor" systemColor="systemRedColor"/>
                                                 <state key="normal" title="Button"/>
                                                 <buttonConfiguration key="configuration" style="filled" title="Log In">
@@ -153,7 +153,7 @@
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jpM-xU-y2P">
-                                                <rect key="frame" x="182.66666666666663" y="0.0" width="170.33333333333337" height="67.333333333333329"/>
+                                                <rect key="frame" x="182.66666666666663" y="0.0" width="170.33333333333337" height="80"/>
                                                 <color key="backgroundColor" systemColor="systemRedColor"/>
                                                 <state key="normal" title="Button"/>
                                                 <buttonConfiguration key="configuration" style="filled" title="Cancel">
@@ -167,7 +167,7 @@
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="X4B-Yt-Vqw">
-                                        <rect key="frame" x="0.0" y="335" width="353" height="340"/>
+                                        <rect key="frame" x="0.0" y="385.66666666666674" width="353" height="416.33333333333326"/>
                                         <subviews>
                                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Is this your first time logging on to our donor portal?" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="URW-oB-gMR" userLabel="firstTimeTV">
                                                 <rect key="frame" x="0.0" y="0.0" width="276" height="50"/>
@@ -177,7 +177,7 @@
                                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                             </textView>
                                             <stackView opaque="NO" contentMode="scaleToFill" alignment="top" spacing="-15" translatesAutoresizingMaskIntoConstraints="NO" id="Sif-Gf-FbF">
-                                                <rect key="frame" x="0.0" y="50" width="211.33333333333334" height="290"/>
+                                                <rect key="frame" x="0.0" y="50" width="211.33333333333334" height="366.33333333333331"/>
                                                 <subviews>
                                                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Click on" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="KGF-v1-peg" userLabel="CreateOneTV">
                                                         <rect key="frame" x="0.0" y="0.0" width="77" height="50"/>
@@ -223,6 +223,7 @@
                         <outlet property="emailTF" destination="Gy9-ZL-9Xx" id="jNa-kQ-KfR"/>
                         <outlet property="passwordTF" destination="cJa-rr-pNf" id="KZK-Tk-xax"/>
                         <outlet property="titleLBL" destination="t3O-Zj-721" id="Gyg-3G-rbX"/>
+                        <segue destination="PiV-vD-j05" kind="show" identifier="goToNext" id="XEa-z5-NQy"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bjK-pn-8B9" sceneMemberID="firstResponder"/>
@@ -348,6 +349,7 @@
                         <outlet property="emailTF" destination="FKF-rF-2Yi" id="bTn-xi-KTR"/>
                         <outlet property="passwordTF" destination="7FD-Ai-gBy" id="D0t-6k-6yA"/>
                         <outlet property="titleLBL" destination="y5L-5C-H6p" id="rsZ-U4-hyC"/>
+                        <segue destination="PiV-vD-j05" kind="show" identifier="goToNext" id="3uv-4P-1cb"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="PiB-76-4hq" sceneMemberID="firstResponder"/>
@@ -359,7 +361,7 @@
             <objects>
                 <viewController id="PiV-vD-j05" customClass="HomeVC" customModule="Blood_Bank_System" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="iJu-UQ-ubj">
-                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mF8-ql-SPI">
@@ -373,6 +375,7 @@
                         <viewLayoutGuide key="safeArea" id="7be-b6-u4v"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
+                    <navigationItem key="navigationItem" id="odg-kJ-2PH"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="d2P-5L-gMl" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -380,6 +383,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
+        <segue reference="XEa-z5-NQy"/>
         <segue reference="b7U-xg-91p"/>
         <segue reference="t3D-Pk-S7w"/>
     </inferredMetricsTieBreakers>
